<resources>
    <string name="app_name">PokePMDex</string>
    <string name="data_altura">Height:</string>
    <string name="data_weight">Weight:</string>
    <string name="data_baseStats">Base Stats</string>
    <string name="data_attack">Attack:</string>
    <string name="data_defense">Defense:</string>
    <string name="data_specialAttack">Special attack:</string>
    <string name="data_specialDefense">Special defense:</string>
    <string name="data_speed">Speed:</string>
    <string name="data_favourites">Add to favourites</string>
    <string name="list_prev">Prev</string>
    <string name="list_next">Next</string>
    <string name="list_generation">Generation</string>
    <string name="favourites_hint">Seach pokemon</string>
    <string name="favourites_favouritesText">Favourites</string>
    <string name="favourites_already">Pokemon already in favourites</string>
    <string-array name="favourites_notification">
        <item>Pokemon added to favourites</item>
        <item>You have added %1$s to your list of favourites</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>