<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ButtonNext"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Circulo"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/rectangle" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/rectangle" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#CC0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/rectangle" />

    <ImageView
        android:id="@+id/Circulo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.144"
        app:srcCompat="@drawable/_6aa" />

    <ImageView
        android:id="@+id/data_pokemon_sprite"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="@+id/Circulo"
        app:layout_constraintEnd_toEndOf="@+id/Circulo"
        app:layout_constraintStart_toStartOf="@+id/Circulo"
        app:layout_constraintTop_toTopOf="@+id/Circulo"
        app:layout_constraintVertical_bias="0.54"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageButton
        android:id="@+id/data_button_return"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@id/imageView3"
        app:layout_constraintEnd_toEndOf="@id/imageView3"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="@id/imageView3"
        app:layout_constraintTop_toTopOf="@id/imageView3"
        app:layout_constraintVertical_bias="0.557"
        app:srcCompat="@drawable/outline_arrow_back_24" />

    <TextView
        android:id="@+id/WeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/data_weight"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Circulo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/HeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/data_altura"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/WeightText"
        app:layout_constraintTop_toBottomOf="@+id/WeightText"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/data_pokemon_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/WeightText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toEndOf="@+id/WeightText"
        app:layout_constraintTop_toTopOf="@+id/WeightText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/data_pokemon_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/HeightText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/data_pokemon_weight"
        app:layout_constraintTop_toTopOf="@+id/HeightText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/data_pokemon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_black"
        android:text="TextView"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Circulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/BaseStatsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:text="@string/data_baseStats"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/HeightText"
        app:layout_constraintTop_toBottomOf="@+id/HeightText"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/data_text_Hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="Hp:"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/BaseStatsText"
        app:layout_constraintTop_toBottomOf="@+id/BaseStatsText"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/data_text_attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/data_attack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/data_text_Hp"
        app:layout_constraintTop_toBottomOf="@+id/data_text_Hp" />

    <TextView
        android:id="@+id/data_text_defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/data_defense"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/data_text_attack"
        app:layout_constraintTop_toBottomOf="@+id/data_text_attack"
        app:layout_constraintVertical_bias="0.182" />

    <TextView
        android:id="@+id/data_text_special_attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/data_specialAttack"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/data_text_Hp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/data_text_Hp"
        app:layout_constraintVertical_bias="0.747" />

    <TextView
        android:id="@+id/data_text_special_defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/data_specialDefense"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/data_text_attack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/data_text_special_attack"
        app:layout_constraintTop_toTopOf="@+id/data_text_attack"
        app:layout_constraintVertical_bias="0.178" />

    <TextView
        android:id="@+id/data_text_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/data_speed"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/data_text_defense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/data_text_special_defense"
        app:layout_constraintTop_toTopOf="@+id/data_text_defense"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/data_pokemon_hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/data_text_Hp"
        app:layout_constraintEnd_toStartOf="@+id/data_text_special_attack"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/data_text_Hp"
        app:layout_constraintTop_toTopOf="@+id/data_text_Hp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/data_pokemon_attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/data_text_attack"
        app:layout_constraintEnd_toStartOf="@+id/data_text_special_defense"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/data_text_attack"
        app:layout_constraintTop_toTopOf="@+id/data_text_attack"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/data_pokemon_defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/data_text_defense"
        app:layout_constraintEnd_toStartOf="@+id/data_text_speed"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/data_text_defense"
        app:layout_constraintTop_toTopOf="@+id/data_text_defense"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/data_pokemon_special_attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/data_text_special_attack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/data_text_special_attack"
        app:layout_constraintTop_toTopOf="@+id/data_text_special_attack"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/data_pokemon_special_defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/data_text_special_defense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/data_text_special_defense"
        app:layout_constraintTop_toTopOf="@+id/data_text_special_defense"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/data_pokemon_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/data_text_speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/data_text_speed"
        app:layout_constraintTop_toTopOf="@+id/data_text_speed"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/data_button_favourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#CC0000"
        android:text="@string/data_favourites"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/data_pokemon_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toEndOf="@+id/data_pokemon_name"
        app:layout_constraintTop_toTopOf="@+id/data_pokemon_name"
        app:layout_constraintVertical_bias="0.437" />

    <ImageButton
        android:id="@+id/data_button_share"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/Circulo"
        app:layout_constraintEnd_toStartOf="@+id/Circulo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Circulo"
        app:layout_constraintVertical_bias="0.053"
        app:srcCompat="@drawable/share_arrow_white_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>